[tool.poetry]
name = "diffusion"
version = "0.1.0"
description = ""
authors = ["Kai Yamashita <kai.yamashita@weblab.t.u-tokyo.ac.jp>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
torch = "2.1.2"
torchvision = "0.16.2"
wandb = "^0.17.1"
torchinfo = "^1.8.0"
attrdict = "^2.0.1"
lpips = "^0.1.4"
pathtools = "^0.1.2"
einops = "^0.8.0"
deepspeed = "^0.14.2"
mpi4py = "^3.1.6"
transformers = "^4.41.2"
setuptools = "69.5.1"
packaging = "^24.1"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
